--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 
       <div class="card__content">
         <div id="info">
-          <h1 class="card__title">Equilibrium #3429</h1>
+            <div class="card__title">
+                <h1>Equilibrium #3429</h1>
+            </div>
           <p class="card__description">
             Our Equilibrium collection promotes balance and calm.
           </p>
         </div>
 
-        <!-- <div class="card__title">
-                <h1>Equilibrium #3429</h1>
-            </div>
+        <!-- 
             
             <p class="card__description" id="info">
                 Our Equilibrium collection promotes balance and calm.
