--- a/index.html
+++ b/index.html
@@ -35,23 +35,10 @@
       </div>
 
       <div class="card__content">
-        <!-- <div id="info">
-            <div class="card__title">
-                <h1>Equilibrium #3429</h1>
-            </div>
-          <p class="card__description">
-            Our Equilibrium collection promotes balance and calm.
-          </p>
-        </div> -->
-
         <div class="card__title">
           <h1>Equilibrium #3429</h1>
         </div>
-
-        <p id="info" class="card__description">
-          Our Equilibrium collection promotes balance and calm.
-        </p>
-
+        <p id="info" class="card__description">Our Equilibrium collection promotes balance and calm.</p>
         <div class="card__time">
           <div class="card__time-left">
             <svg width="11" height="18" xmlns="http://www.w3.org/2000/svg">
